<resources>
    <string name="app_name">Gestor Financeiro</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="criar_conta">Crie sua conta</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="cpf">CPF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
